# gpmp-contrib

./: README.md  pyproject.toml  setup.py
examples/: example01_computer_experiment.py  example02_models.py  example03_sequential_prediction.py  example10_optim_EI.py  example20_regp.py  expected_improvement_demo01.py  expected_improvement_demo02.py  optim_expected_improvement.py  optim_expected_improvement_r.py  optim_parego_sketch.py  test_expected_improvement.py  test_parego.py
gpmpcontrib/: __init__.py  computerexperiment.py  models.py  pointwisecriterion.py  regp.py  sampcrit.py  samplingcriteria.py  sequentialprediction.py  smc.py  subsetpointwisecriterion.py
gpmpcontrib/levelset/: __init__.py  straddle.py  test_problems.py
gpmpcontrib/misc/: computer_experiment.py  problem.py
gpmpcontrib/models/: __init__.py  stochasticmomodel.py
gpmpcontrib/optim/: __init__.py  expectedimprovement.py  expectedimprovement_r.py  pareto.py  test_problems.py  ucb.py
